--- a/frontend/src/i18n/ua.json
+++ b/frontend/src/i18n/ua.json
@@ -1,5 +1,5 @@
 {
-  "Bring it on!": "Ну, Понеслася!",
+  "Bring it on!": "Почнемо!",
   "Next": "Далі",
   "English": "Чужинська",
   "Ukrainian": "Соловʼїна",
