added actors quiz mode

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -1,5 +1,6 @@
 {
-  "Bring it on!": "Bring it on!",
+  "Guess by movie image": "Guess by movie image",
+  "Guess by movie actors": "Guess by movie actors",
   "Next": "Next",
   "English": "English",
   "Ukrainian": "Ukrainian",
