--- a/frontend/src/i18n/ua.json
+++ b/frontend/src/i18n/ua.json
@@ -1,5 +1,6 @@
 {
-  "Bring it on!": "Почнемо!",
+  "Guess by movie image": "Вгадати фільм за зображенням",
+  "Guess by movie actors": "Вгадати фільм за його акторами",
   "Next": "Далі",
   "English": "Чужинська",
   "Ukrainian": "Соловʼїна",
